--- a/home.css
+++ b/home.css
@@ -41,12 +41,11 @@ a:not([class]) {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 20px;
-  background-color: #fff;
-  border: 1px solid #000;
+  padding: 4rem;
+  background-color: transparent;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   z-index: 100000;
-  border-radius: 4rem;
+  border-radius: 3rem;
   background-color: #F5F5F5;
   width: 27%;
   min-height: 50%;
@@ -67,7 +66,6 @@ a:not([class]) {
 .form-container {
   display: flex;
   flex-direction: column;
-  gap: 0.8rem;
   align-items: flex-start;
   width: 100%;
 }
@@ -105,34 +103,28 @@ width:96%;
 .second-set,
 .third-set {
   display: none;
-  gap:1rem !important;
 }
-
-.second-set .form-label {
-  color: white;
-    position: relative;
-    left: 3rem;
-    font-size: 1.8rem;
-    font-weight: 400;
-    font-family: 'Lato',sans-serif;
-   
-}
-input[type="checkbox"] {
-  appearance: auto;
-  border: 1px solid #000; 
-  width: 1.8rem;
-  height: 1.8rem; 
-  position: relative;
-    bottom: 3.2rem;
-}
+.second-set .form-label,
 .third-set .form-label {
   color: white;
-    position: relative;
-    left: 3rem;
-    font-size: 1.8rem;
-    font-weight: 400;
-    font-family: 'Lato',sans-serif;
-    
+  position: relative;
+  font-size: 1.8rem;
+  font-weight: 400;
+  font-family: 'Lato', sans-serif;
+  padding-bottom: 0;
+}
+.second-set,
+.third-set {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem !important; /* adjust the gap as you like */
+  width: 100%;
+}
+
+.checkdiv{
+  display: flex;
+  gap:0.6rem;
+  margin-bottom: 2rem;
 }
 #book{
   background: #FBC336;
@@ -142,17 +134,19 @@ input[type="checkbox"] {
     width: 13rem;
     height: 4.5rem;
     font-size:1.6rem;
-    font-weight: 450;
+    font-weight: 600;
    
 }
 
 input[type="checkbox"] {
   appearance: auto;
-  border: 1px solid #000; 
+  border: 1px solid #fff; 
+  border-radius: 0.2rem;
+  background-color: transparent;
   width: 1.8rem; 
   height: 1.8rem; 
-  position: relative;
-    bottom: 3.2rem;
+    accent-color: #4EAF4E !important;
+
 }
 
 #next {
@@ -163,7 +157,7 @@ input[type="checkbox"] {
     width: 13rem;
     height: 4.5rem;
     font-size:1.6rem;
-    font-weight: 450;
+    font-weight: 600;
     
 }
 
@@ -213,9 +207,6 @@ input[type="checkbox"] {
  margin: 4vh auto;
  animation: tick-animation 0.5s ease-in-out forwards;
 }
-
-
-
 
 @media (prefers-reduced-motion: reduce) {
   html:focus-within {
@@ -309,6 +300,7 @@ color: white;}
   box-shadow: 0px 12px 16px 0px rgba(0,0,0,0.2);
   z-index: 1;
   align-items: center;
+  padding-top: 1rem;
 }
 
 .dropdown-content a {
@@ -1051,6 +1043,11 @@ font-weight:600;
     width:100%;
 
   }
+  .plus-num{
+    display: inline-flex;
+    gap: 1rem;
+  }
+
 
   .num-center{
     text-align: center;
@@ -1749,27 +1746,34 @@ padding-left: 0rem;
 }
 
 .link-head {
- color: #fff;
- font-weight: 500;
- font-size:2rem;
-}
-
-.link-list li{
-  margin-top:1rem;
-  font-size: 1.5rem;
-}
-
-.link-list a{
   color: #fff;
-  margin-top:2rem;
-}
-
-.agency-text{
-  color:#fff;
-  font-size: 1.5rem;
-  
-}
-
+  font-weight: 600;
+  font-size:2rem;
+  font-family: 'Poppins', sans-serif;
+ }
+ 
+ .link-list li{
+   margin-top:1rem;
+   font-size: 1.8rem;
+   font-family: 'Lato', sans-serif;
+   font-weight: 500;
+ }
+ 
+ .link-list a{
+   color: #fff;
+   margin-top:2rem;
+ }
+ .link-list li a:hover {
+   color: #4EAF4E;
+   text-decoration: none; /* Set the green color on hover */
+ }
+ 
+ .agency-text{
+   color:#fff;
+   font-size: 1.5rem;
+   font-family: 'Lato', sans-serif;
+   font-weight: 400;
+ }
 .copy-text{
   color:#fff;
   font-size: 1.5rem;
