--- a/IELTS.css
+++ b/IELTS.css
@@ -48,8 +48,30 @@ a:not([class]) {
   z-index: 100000;
   border-radius: 3rem;
   background-color: #F5F5F5;
-  width: 27%;
+  width: 39.4rem;
   min-height: 50%;
+}
+@media(max-width:400px){
+  .popup-form {
+    background-image: url('./bookingform.assets/consultation-form.png');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 4rem;
+    background-color: transparent;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    z-index: 100000;
+    border-radius: 3rem;
+    background-color: #F5F5F5;
+    width: 24rem;
+    min-height: 50%;
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
 }
 .popup-heading{
   color: #FBC336;
@@ -426,6 +448,7 @@ color: white;}
     justify-content: center;
     align-items: center;
     margin: 75px auto 0;
+    padding-bottom: 1.4rem;
   }
   
   .container1 img {
@@ -433,7 +456,7 @@ color: white;}
     height: auto;
     max-width: 944px; 
     position: relative;
-    top: 2.5rem;
+    top: 2.3rem;
   }
 
 
@@ -445,14 +468,14 @@ color: white;}
     align-items: center;
     flex-direction: column;
     position: relative;
-    padding-top: 4vh;
+    padding-top: 5vh;
   }
   
   .container2 h2 {
     color: #181818;
     text-align: center;
     font-family: 'Poppins', sans-serif;
-    font-size: 3.5rem;
+    font-size: 4rem;
     font-style: normal;
     font-weight: 600;
     line-height: 116%;
@@ -507,28 +530,40 @@ color: white;}
     background: #F5F5F5;
     width: 100vw;
     font-family: "Poppins", sans-serif;
-    padding-top: 20vh;
-    padding-left: 8vw;
-    padding-right: 8vw;
+    padding-top: 6vh;
+    padding-left: 10vw;
+    padding-right: 10vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: flex-start; 
     gap: 3rem;
-    padding-bottom: 20vh;
+    padding-bottom: 6vh;
   }
   
+.container3 .title2 {
+display: flex;
+justify-content: center;
+  align-items: center !important;
+  width: 100%;
+  font-size: 3rem;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+}
+
   .row {
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
   }
   
   .col-md-4 {
-    flex-basis: calc(33.3333% - 2rem); 
+    flex-basis: calc(33.3333% - 5rem); 
     flex-grow: 0;
     flex-shrink: 0;
     padding: 1rem; 
-    margin-bottom: 2rem; 
+    margin-bottom: 3rem; 
     box-sizing: border-box; 
   }
   
@@ -541,9 +576,25 @@ color: white;}
     justify-content: space-between;
     align-items: flex-start; 
     box-sizing: border-box;
-    width: 100%;
-    min-height: 300px; 
-    gap: 1rem;
+    width: 36rem;
+    min-height: 250px; 
+    gap: 3rem;
+  }
+  @media (min-width:992px) and (max-width:1200px){
+    .test-card {
+      padding: 4rem; 
+      border-radius: 20px;
+      background: #EBEBEB;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: flex-start; 
+      box-sizing: border-box;
+      width: 36rem;
+      min-height: 250px; 
+      gap: 3rem;
+      margin:2rem;
+    }
   }
   
   .test-card p {
@@ -569,6 +620,8 @@ color: white;}
   
     .row {
       margin: 0;
+      justify-content: center;
+      align-items: center;
     }
   
     .col-md-4 {
@@ -576,13 +629,30 @@ color: white;}
       padding: 1rem; 
       margin-bottom: 1rem; 
     }
-  
-    .test-card {
-      min-height: 250px; 
-    }
-  
     .test-card p {
       font-size: 1.5rem;
+    }
+    .test-card {
+      padding: 8rem; 
+      border-radius: 20px;
+      background: #EBEBEB;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: flex-start; 
+      box-sizing: border-box;
+      width: 34rem;
+      min-height: 250px; 
+      gap: 3rem;
+      margin: 1rem;
+    }
+    .row{
+      margin:1rem;
+    }
+    .col-md-4 {
+      padding: 1rem; 
+      margin-bottom: 1rem; 
+      flex-basis:50%;
     }
   }
 
@@ -600,13 +670,31 @@ color: white;}
     .col-md-4 {
       padding: 1rem; 
       margin-bottom: 1rem; 
+      flex-basis:50%;
     }
     
     .test-card {
       min-height: 300px !important;
+      padding: 8rem;
+
     }
   }
-  
+  @media (min-width:1590px){
+    .test-card {
+      padding: 6rem; 
+      border-radius: 20px;
+      background: #EBEBEB;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      align-items: flex-start; 
+      box-sizing: border-box;
+      width: 90%;
+      min-height: 250px; 
+      gap: 3rem;
+      margin: 1rem;
+    }
+  }
 
   .test-card:hover {
     background-color: #4EAF4E;
@@ -632,7 +720,11 @@ color: white;}
       padding-top: 4vh;
       padding-bottom: 2vh;
   }
-  
+  .container8 .title{
+    font-size: 3rem;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  }
   .faq-content{
     border-radius: 30px;
   background: #FFF4F0;
@@ -663,7 +755,8 @@ color: white;}
     display: inline-block; 
     max-width: 80%;
     margin-bottom: 0;
-    font-weight: 300;
+    font-weight: 400;
+    font-family: 'Lato', sans-serif;
   }
   
   #accordian .faq-item .one-line{
@@ -774,6 +867,8 @@ color: white;}
     color: white;
     position: relative;
     letter-spacing: 0.2rem;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
   }
   
   .Tcontent {
@@ -797,7 +892,7 @@ color: white;}
     position: relative;
   }
   
-  .container11 h5 {
+  .container11 .role {
     color: #4eaf4e;
     font-family: Lato;
     font-size: 1.8rem;
@@ -811,7 +906,7 @@ color: white;}
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 80%;
+    width: 50%;
   }
   
   .P {
@@ -830,10 +925,11 @@ color: white;}
   .P p {
     color: #353535;
     font-family: Lato;
-    font-size: 2rem;
+    font-size: 1.6rem;
     font-style: normal;
     font-weight: 600;
     line-height: 160%;
+    margin: 0;
   }
  
   .help-section {
@@ -845,7 +941,7 @@ color: white;}
   
   .containerform {
     background-image: url('./about.assets/background1.png');
-    background-size: cover;
+    background-size: 100% 100%;
     background-position: center;
     border-radius: 20px;
     display: flex;
@@ -854,7 +950,9 @@ color: white;}
     width: 1200px;
     height: 300px;
     padding: 0 8vw ;
+    padding-left:13vw;
   }
+
   
   .right-columns {
     text-align: left;
@@ -865,10 +963,13 @@ color: white;}
   
   .right-columns h2 {
     font-size: 4rem;
+    font-family: 'Poppins',sans-serif;
+    font-weight: 600;
   }
   
   .right-columns p {
     font-size: 1.75rem;
+    font-family: 'Lato',sans-serif;
   }
   
   .left-columns{
@@ -883,23 +984,39 @@ color: white;}
     border-radius: 60px !important;
     padding:15px 25px !important;
     color: #181818 !important;
+    font-family: 'Lato',sans-serif !important;
     font-size: 2rem !important;
     cursor: pointer;
     width: 60% !important;
-    font-weight: 500 !important;
+    font-weight: 600 !important;
+  }
+  .btn-primary:hover{
+    background-color: #4EAF4E !important;
+    color:white !important;
+    border: none !important;
   }
   
-  @media (min-width: 770px) and (max-width: 1200px){
-    .help-section{
-      padding-left: 2vw ;
-      padding-right: 2vw;
+  
+  
+  
+  
+  @media (min-width:769px) and (max-width:1200px){
+    .containerform {
+      background-image: url('./about.assets/background1.png');
+      background-size: 100% 100%;
+      background-position: center;
+      border-radius: 20px;
+      display: flex;
+      justify-content: center;
+      align-items: center; 
+      width: 1200px;
+      height: 250px;
+      padding: 0 8vw ;
+      padding-left:13vw;
+      margin-left: 1rem;
+      margin-right: 1rem;
     }
   }
-  
-  
-  
-  
-  
   @media (max-width: 768px) {
     .help-section{
       padding-bottom: 2vh ;
@@ -915,32 +1032,37 @@ color: white;}
     }
   
     .right-columns {
-      flex: 0 0 100%;
+      flex: 0 0 100%; /* Use full width for small screens */
       max-width: 100%;
       align-items: center;
       justify-content: center; 
-      text-align: center;
+      text-align: center;/* Use full width for small screens */
     }
     .right-columns h2 {
       font-size: 2rem;
+      font-family: 'Poppins',sans-serif;
+      font-weight: 600;
     }
     
     .right-columns p {
       font-size: 1.2rem;
+      font-family: 'Lato',sans-serif;
     }
   
   
     .left-columns {
-      flex: 0 0 100%; 
-      max-width: 100%; 
+      flex: 0 0 100%; /* Use full width for small screens */
+      max-width: 100%; /* Use full width for small screens */
     }
     .btn-primary {
       padding:10px 20px !important;
       width: 100% !important;
       font-size: 1.5rem !important;
-  
+      font-family: 'Lato',sans-serif !important;
+      font-weight: 600 !important;
     }
   }
+  
   
   
   
