--- a/home.css
+++ b/home.css
@@ -616,6 +616,14 @@ border:none;
   color:white;
   background-color: #FFCC4A;
 }
+.btn2 a{
+  text-decoration: none;
+  color: white;
+}
+.btn2 a:hover{
+  text-decoration: none;
+  color: white;
+}
 .AU{
   position:relative;
   width:90%;
@@ -631,8 +639,41 @@ border:none;
   display: flex;
   flex-direction: column;
   justify-content: center; 
+  gap:1rem;
+}
+.Green-Background{
+  width: 60%;
+  height: auto;
+  position: relative;
+  right: 21rem;
+  bottom:16rem;
+  z-index: -1;
+ 
+}
+.Green-Background2{
+  width: 23%;
+  position: relative;
+ bottom:33rem;
+  left: 106rem;
+  z-index: -1;
 }
 
+.SDP{
+  width: 39%;
+  height: auto;
+  position: relative;
+  left: 49rem;
+bottom:98rem;
+  z-index: -1;
+}
+.SDP2{
+  width: 18%;
+  height: auto;
+  left: 113rem;
+  position: relative;
+  bottom:110rem;
+  z-index: -1;
+}
 .card-row {
   display: flex;
   flex-wrap: wrap;
@@ -697,7 +738,6 @@ border:none;
   color: white;}
   
 }
-
 
 .container4{
 
@@ -1505,6 +1545,14 @@ padding-left: 0rem;
     margin-right: auto;
     font-family:'Poppins,sans-serif' ;
     font-weight: 500;
+}
+.btn2 a{
+  text-decoration: none;
+  color: white;
+}
+.btn2 a:hover{
+  text-decoration: none;
+  color: white;
 }
 }
 
@@ -2383,7 +2431,7 @@ color: white;}
     border-radius: 15px;
     padding: 1.25rem 1.875rem;
     width: 30%;
-  font-size: 20px;
+  font-size: 1.2rem;
   font-weight: 375;
   justify-content:center;
   align-items: center;
@@ -2485,6 +2533,14 @@ color: white;}
   .btn2:hover{
     color:white;
     background-color: #FFCC4A;
+  }
+  .btn2 a{
+    text-decoration: none;
+    color: white;
+  }
+  .btn2 a:hover{
+    text-decoration: none;
+    color: white;
   }
   .AU{
     position:relative;
@@ -2673,6 +2729,23 @@ font-family:'Poppins',sans-serif ;
   }
 }
 @media (min-width:771px) and (max-width:879px){
+  .btn1{
+    display:flex;
+    background-color:#4EAF4E;
+    color:white;
+    border-radius: 15px;
+    padding: 1.25rem 1.875rem;
+    width: 30%;
+  font-size: 1.1rem;
+  font-weight: 375;
+  justify-content:center;
+  align-items: center;
+  border:none;
+  }
+  .btn1:hover{
+    color:white;
+    background-color: #FFCC4A;
+  }
     .container7 {
       background: #fafffb;
       width: 100vw;
@@ -2868,5 +2941,36 @@ font-family:'Poppins',sans-serif ;
     margin-bottom: 0.5rem;
     height: 25.575rem;
     width: 39.1875rem;
+  }
+}
+@media (min-width:1201px) and (max-width:1350px){
+  .btn2{
+    display:flex;
+    background-color:#4EAF4E;
+    color:white;
+    border-radius: 15px;
+    padding: 1.2rem;
+    display: inline-block;
+    max-width:30%;
+  font-size: 20px;
+  font-family:'Poppins,sans-serif' ;
+  font-weight: 500;
+  justify-content:center;
+  align-items: center;
+  border:none;
+  }
+  .btn2 a{
+    text-decoration: none;
+    font-size:1.2rem;
+    color: white;
+  }
+  .btn2 a:hover{
+    text-decoration: none;
+    font-size:1.2rem;
+    color: white;
+  }
+  .btn2:hover{
+    color:white;
+    background-color: #FFCC4A;
   }
 }
