--- a/IELTS.css
+++ b/IELTS.css
@@ -891,7 +891,7 @@ justify-content: center;
   
   .container11 .role {
     color: #4eaf4e;
-    font-family: Lato;
+    font-family: 'Lato',sans-serif;
     font-size: 1.8rem;
     font-style: normal;
     font-weight: 600;
@@ -922,7 +922,7 @@ justify-content: center;
   
   .P p {
     color: #353535;
-    font-family: Lato;
+    font-family: 'Lato',sans-serif;
     font-size: 1.6rem;
     font-style: normal;
     font-weight: 600;
