--- a/home.css
+++ b/home.css
@@ -1212,22 +1212,22 @@ height: 7rem;
   flex-direction: column;
 width: 100%;
   justify-content: center;
-  align-items: center;
+  align-items: baseline;
   vertical-align: middle;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
   margin-bottom: 2.5rem;
   flex-grow: 1;
-height: 30vh;
+height: 35vh;
 }
 .testimonial-card p {
   color: black;
   font-size: 1.6rem;
   font-weight: 400;
   font-family:'Lato',sans-serif;
-  text-align: center;
+  text-align: left;
   vertical-align: middle;
 }
-/* 
+
 .testimonial-card .testimonial-author {
   display: flex;
   align-items: center;
@@ -1252,7 +1252,7 @@ height: 30vh;
   font-family: 'Poppins', sans-serif;
   color:black;
 }
- */
+ 
 
 .container8{
   background: #FFF;
@@ -2953,7 +2953,7 @@ margin-bottom: 2rem;
 }
 
 
-@media (min-width: 780px) and (max-width:925px){
+@media (min-width: 769px) and (max-width:925px){
   .testimonial-card {
     padding: 4rem;
     border-radius: 20px;
@@ -2962,9 +2962,9 @@ margin-bottom: 2rem;
     flex-direction: column;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     margin-bottom: 0.5rem;
-    height: 86vh;
+    height: 65vh;
     justify-content: center;
-    align-items: center;
+    align-items: baseline;
     vertical-align: middle;
  
   }
@@ -2978,11 +2978,11 @@ margin-bottom: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: baseline;
     vertical-align: middle;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     margin-bottom: 0.5rem;
-    height: 62vh;
+    height: 60vh;
  
   }
 }
@@ -2997,11 +2997,11 @@ margin-bottom: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: baseline;
     vertical-align: middle;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     margin-bottom: 0.5rem;
-    height: 52vh;
+    height: 50vh;
  
   }
 }
@@ -3015,12 +3015,12 @@ margin-bottom: 2rem;
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: baseline;
     vertical-align: middle;
     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
     height: 100%;
     margin-bottom: 0.5rem;
-    height: 25.575rem;
+    height: 30.575rem;
     width: 39.1875rem;
   }
 }
