--- a/home.css
+++ b/home.css
@@ -642,7 +642,7 @@ border:none;
   padding: 5vh 5vw;
   display: flex;
   flex-direction: column;
-  justify-content: center; 
+  justify-content: center;
   gap:1rem;
 }
 .card1 a {
@@ -662,47 +662,47 @@ border:none;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  align-items: stretch; 
+  align-items: stretch;
   padding-left: 6rem;
 
 }
 
 .col-md-4 {
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
   justify-content: flex-start;
-  gap: 1rem; 
+  gap: 1rem;
 
 }
 
 .card1 {
-  
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   flex: 1;
-  position: relative; 
+  position: relative;
   border-radius: 40px;
 }
 
 /*.card1 img {
   width: 100%;
-  object-fit: cover; 
-  height: 100%; 
+  object-fit: cover;
+  height: 100%;
   border-radius: 40px;
 }*/
 
 .places {
-  position: absolute; 
-  bottom: 0; 
+  position: absolute;
+  bottom: 0;
   width: 100%;
   color: #fff;
   text-align: left;
   padding-left: 3rem !important;
   font-family: 'Cabin', sans-serif;
   font-weight:bold;
-  padding: 0.5rem 0; 
-  mix-blend-mode: screen; 
+  padding: 0.5rem 0;
+  mix-blend-mode: screen;
   font-size: 3rem;
 }
 
@@ -720,7 +720,55 @@ border:none;
   .booking
   {background-color: #4EAF4E;
   color: white;}
-  
+
+}
+.card1 {
+  position: relative;
+}
+
+.card-svg {
+  position: absolute;
+  z-index: -1;
+  width: 100px;
+}
+
+.usa-svg {
+  bottom: -4rem;
+  left: -10rem;
+}
+
+.aus-svg{
+  top: 3rem;
+  right: -10rem;
+}
+
+.uk-svg {
+  top: -4rem;
+  left: 85%;
+  transform: translateX(-50%);
+}
+
+.world-svg {
+  bottom: -1rem;
+  right: -12rem;
+}
+
+@media (max-width: 768px) {
+  .usa-svg{
+    bottom: -1rem;
+  }
+
+  .aus-svg{
+    top: 2rem;
+  }
+
+  .uk-svg{
+    top: 12rem;
+  }
+
+  .world-svg{
+    right: -10rem;
+  }
 }
 
 .container4{
@@ -2277,7 +2325,7 @@ color: white;}
 
 }
 @media (min-width:771px) and (max-width:992px){
-  .container3 {
+  /*.container3 {
     background-color: var(--clr-accent);
     width: 100vw;
     height: auto;
@@ -2338,7 +2386,25 @@ color: white;}
   
   .card-row .col-md-4 .card1:last-child {
     margin-bottom: 0;
+  }*/
+  .usa-svg{
+    bottom: -1rem;
   }
+
+  .aus-svg{
+    top: 2rem;
+  }
+
+  .uk-svg{
+    top: 12rem;
+  }
+
+  .world-svg{
+    right: -10rem;
+  }
+  .card1 img {
+    margin-top: 2rem;
+}
   .container4 {
     background: #F5F5F5;
     width: 100vw;
@@ -2568,7 +2634,7 @@ margin-bottom: 2rem;
     height: auto;
     padding-right: 4rem;
   }
-  .container3 {
+  /*.container3 {
     background-color: var(--clr-accent);
     width: 100vw;
     height: auto;
@@ -2624,11 +2690,9 @@ margin-bottom: 2rem;
     font-family: 'Cabin', sans-serif;
     font-weight:bold;
   }
-  
-  
   .card-row .col-md-4 .card1:last-child {
     margin-bottom: 0;
-  }
+  }*/
   .container4 {
     background: #F5F5F5;
     width: 100vw;
@@ -2932,9 +2996,7 @@ margin-bottom: 2rem;
   }
   
   .card1 img {
-    width: 100%;
-    object-fit: cover; 
-    height: 100%; 
+    object-fit: cover;
     border-radius: 40px;
   }
   
