--- a/Restoftheworld.css
+++ b/Restoftheworld.css
@@ -101,6 +101,10 @@ a:not([class]) {
   width: 100%;
   box-sizing: border-box;
 }
+.book-button:hover{
+  background-color: #4EAF4E !important;
+  color: white !important;
+}
 
 .first-set .form-label {
   color: #FFF;
